--- a/FirstTest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FirstTest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ MRUItem0=/Game/StarterContent/Maps/Minimal_Default
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -396,7 +396,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent
+ContentBrowserTab1.SelectedPaths=/
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -503,7 +503,7 @@ WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=C:/Users/drmia/Desktop/Work/C++ and Unreal Engine/Unreal-Engine-5-Projects/FirstTest/Content/StarterContent/Maps
+UNR=C:/Users/drmia/Desktop/Work/C++ and Unreal Engine/My First UE5 Project/FirstTest/Content/StarterContent/Maps
 BRUSH=C:/Users/drmia/Desktop/Work/C++ and Unreal Engine/Unreal-Engine-5-Projects/FirstTest/Content/
 FBX=C:/Users/drmia/Desktop/Work/C++ and Unreal Engine/Unreal-Engine-5-Projects/FirstTest/Content/
 FBXAnim=C:/Users/drmia/Desktop/Work/C++ and Unreal Engine/Unreal-Engine-5-Projects/FirstTest/Content/
@@ -1420,6 +1420,7 @@ BP_Sky_Sphere_C=PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Gra
 SceneComponent=PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading|Global,
 StaticMeshActor=PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading|Global,
 Actor=PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading|Global,
+AtmosphericFog=PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading|Global,
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
